<resources>
    <string name="app_name">Infantree</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Drawer opened!</string>
    <string name="close_drawer">Drawer closed!</string>
    <string name="pref_name">infantree</string>
    <string name="server_url">ServerUrl</string>
    <string name="server_url_value">http://125.209.194.223:3000/</string>
    <string name="baby_id">baby_id</string>
    <string name="parent">parent</string> <!--mom or dad-->

    <string name="signup_button">가입</string>
    <string name="me_button">내정보</string>
    <string name="update_profile_button">업데이트</string>

    <string name="name">아이 이름을 입력하세요.</string>
    <string name="age">아이 개월수를 입력하세요.</string>
    <string name="birth">아이 생일을 입력하세요.</string>
    <string name="gender">아이와의 관계를 입력하세요.</string>

    <string-array name="gender_types">
        <item>mom</item>
        <item>dad</item>
    </string-array>
</resources>
